// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot <ButtonFavorite /> Render <ButtonFavorite / placesType.CITY>  1`] = `
<button
  className="button place-card__bookmark-button place-card__bookmark-button--active"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={18}
    width={17}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`Snapshot <ButtonFavorite /> Render <ButtonFavorite /> placesType.OFFER_DETAILS 1`] = `
<button
  className="button property__bookmark-button place-card__bookmark-button--active"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={33}
    width={31}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;
